filter and booked devices page

--- a/src/app/components/device/device.component.html
+++ b/src/app/components/device/device.component.html
@@ -10,7 +10,7 @@
     tuiButton
     type="button"
     class="button"
-    style="height: 32px; font-size: 10px"
+    style="height: 32px; font-size: 10px; width: 80%;"
   >
     Забронировать
   </button>
