--- a/src/app/pages/booked-devices-page/booked-devices-page.component.html
+++ b/src/app/pages/booked-devices-page/booked-devices-page.component.html
@@ -1,1 +1,5 @@
-<p>booked-devices-page works!</p>
+<div class="wrapper">
+  <app-booked-device></app-booked-device>
+  <app-booked-device></app-booked-device>
+  <app-booked-device></app-booked-device>
+</div>
