--- a/src/app/components/booked-device/booked-device.component.scss
+++ b/src/app/components/booked-device/booked-device.component.scss
@@ -1,4 +1,5 @@
 .item{
+  //width: 40vw;
   width: 150px;
   padding-bottom: 15px;
   font-size: 10px;
@@ -15,10 +16,3 @@
 
   margin-top: 15px;
 }
-
-.button{
-  width: 120px;
-  height: 10px;
-  font-size: 10px;
-}
-
