--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
-  <router-outlet></router-outlet>
-</div>
-<app-navigation></app-navigation>
-
+<tui-root>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+  <app-navigation></app-navigation>
+</tui-root>
