--- a/src/app/components/booked-device/booked-device.component.scss
+++ b/src/app/components/booked-device/booked-device.component.scss
@@ -1,13 +1,11 @@
 .item{
-  //width: 40vw;
-  width: 150px;
+  width: 40vw;
   padding-bottom: 15px;
   font-size: 10px;
   color: #526ED3;
   text-align: center;
   border-radius: 20px;
   background: #FFFFFF;
-  border: 2px solid #EBEFFF;
   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.12));
 }
 
