--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,20 @@
 <nav class="nav">
-  <a routerLink="/booked">Бронь</a>
-  <a routerLink="/">Список</a>
-  <a routerLink="/profile">Профиль</a>
+  <a routerLink="/booked" class="link" routerLinkActive="active">
+      <tui-svg
+        src="tuiIconCheckCircleLarge"
+        class="icon"
+      ></tui-svg>
+  </a>
+  <a routerLink="/devices" class="link" routerLinkActive="active">
+      <tui-svg
+        src="tuiIconSearchLarge"
+        class="icon"
+      ></tui-svg>
+  </a>
+  <a routerLink="/profile" class="link" routerLinkActive="active">
+      <tui-svg
+        src="tuiIconUser"
+        class="icon"
+      ></tui-svg>
+  </a>
 </nav>
