--- a/src/app/pages/booked-devices-page/booked-devices-page.component.html
+++ b/src/app/pages/booked-devices-page/booked-devices-page.component.html
@@ -1,5 +1,8 @@
-<div class="wrapper">
-  <app-booked-device></app-booked-device>
-  <app-booked-device></app-booked-device>
-  <app-booked-device></app-booked-device>
+<div style="padding-bottom: 10vh">
+  <app-filter></app-filter>
+  <div class="wrapper">
+    <app-booked-device></app-booked-device>
+    <app-booked-device></app-booked-device>
+    <app-booked-device></app-booked-device>
+  </div>
 </div>
