--- a/src/app/components/device/device.component.html
+++ b/src/app/components/device/device.component.html
@@ -1,17 +1,29 @@
 <div class="item">
-  <img src="https://cdn.fotosklad.ru/upload/iblock/4c7/4c7ffb9c9517a423ddd05daabf243782_thumb_4d76a05b13f4590.jpg"
+  <img [src]="imgUrl"
        class="item_img"
-  />
-  <p>POCO X3 PRO</p>
-  <p>OS: MIUI, Android 11</p>
-  <p>Диагональ: 6.67"</p>
-  <p>Класс: Среднебюджет</p>
+       alt="Изображение устройства"/>
+  <p style="line-height: 13px; font-weight: 700; color: #434854;">{{deviceName}}</p>
+  <p style="line-height: 13px; color: #434854;">OS: {{os}}</p>
+  <p style="line-height: 13px; color: #434854;">Диагональ: {{diagonal}}</p>
+  <p style="line-height: 13px; color: #434854;">Отдел: {{department}}</p>
   <button
     tuiButton
     type="button"
     class="button"
     style="height: 32px; font-size: 10px; width: 80%;"
+    (click)="modalDeviceCardService.open()"
   >
+    <tui-svg
+      src="tuiIconCheckCircle"
+      class="icon"
+    ></tui-svg>
     Забронировать
   </button>
 </div>
+
+<app-modal-device-card *ngIf="modalDeviceCardService.isVisible$ | async"></app-modal-device-card>
+<app-modal-characteristic-device
+  *ngIf="modalCharacteristicDeviceService.isVisible$ | async"></app-modal-characteristic-device>
+<app-modal-usage-history *ngIf="modalUsageHistoryService.isVisible$ | async"></app-modal-usage-history>
+<app-modal-booking-card *ngIf="modalBookingCardService.isVisible$ | async"></app-modal-booking-card>
+<app-modal-success-booking *ngIf="modalSuccessBookingService.isVisible$ | async"></app-modal-success-booking>
