--- a/src/app/components/device/device.component.scss
+++ b/src/app/components/device/device.component.scss
@@ -1,19 +1,19 @@
 .item{
-  width: 150px;
+  width: 40vw;
   padding-bottom: 15px;
   font-size: 10px;
   color: #526ED3;
   text-align: center;
   border-radius: 20px;
   background: #FFFFFF;
-  border: 2px solid #EBEFFF;
   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.12));
 }
 
 .item_img{
   width: 100%;
-
+  height: 120px;
   margin-top: 15px;
+  object-fit: contain;
 }
 
 .button{
