--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,38 +1,96 @@
-<tui-root>
-  <div class="filter">
-    <form
-    >
-      <tui-input style="border: 2px solid #2E62D9; margin-bottom: 15px">
-        Начните поиск здесь...
-        <input
-          tuiTextfield
-          type="text"
-        />
-      </tui-input>
-    </form>
+<button
+  tuiButton
+  size="m"
+  style="border-radius: 0 0 25px 25px; width: 100%; height: 60px; box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.1);"
+  appearance="white"
+  (click)="onClick(content, 'm')"
+>
+  открыть
+</button>
 
-    <tui-input-slider
-      class="control"
-      style="border: 2px solid rgba(46, 98, 217, 0.32); margin-bottom: 15px"
-      [min]="min"
-      [max]="max"
-      [steps]="steps"
-      [quantum]="quantum"
-      [formControl]="control"
-    >
-      Размер экрана, дюймов
-    </tui-input-slider>
-
-
-    <div style="margin-bottom: 15px">
-      <app-dropdown-system></app-dropdown-system>
-      <app-dropdown-type></app-dropdown-type>
+<ng-template
+  #content
+  let-observer
+>
+  <div class="filter tui-container tui-container_adaptive">
+    <div class="tui-row tui-row_adaptive">
+      <form style="width: 100%">
+        <tui-input style="margin-bottom: 15px;"
+                   [tuiTextfieldLabelOutside]="true">
+          Начните поиск здесь...
+          <input
+            tuiTextfield
+            type="text"
+          />
+        </tui-input>
+      </form>
     </div>
 
-    <div>
+    <div class="tui-row tui-row_adaptive">
+      <tui-island class="island">
+        <p style="margin-top: 0; margin-bottom: 11px;">Размер экрана, дюймов</p>
+        <tui-range
+          size="m"
+          [min]="minRange"
+          [max]="maxRange"
+          [step]="stepRange"
+          [(ngModel)]="rangeValue"
+        ></tui-range>
+        <p style="margin-bottom: 0; margin-top: 11px;">
+          <output for="m-size-range">
+            <code>{{ rangeValue | json }}</code>
+          </output>
+          дюймов
+        </p>
+      </tui-island>
+    </div>
+
+    <div class="tui-row tui-row_adaptive" style="margin-bottom: 15px; justify-items: center">
+      <div class="tui-col" style="margin-right: 10px;">
+        <app-dropdown-system></app-dropdown-system>
+      </div>
+      <div class="tui-col">
+        <app-dropdown-type></app-dropdown-type>
+      </div>
+    </div>
+
+    <div class="tui-row tui-row_adaptive">
       <app-dropdown-department></app-dropdown-department>
+      <app-dropdown-tag></app-dropdown-tag>
     </div>
 
-    <button>asdasdas</button>
+<!--    <div class="tui-row tui-row_adaptive">-->
+<!--      <form-->
+<!--        class="b-form"-->
+<!--        style="margin-bottom: 15px; width: 100%"-->
+<!--        [formGroup]="testForm"-->
+<!--        [tuiTextfieldCleaner]="true"-->
+<!--      >-->
+<!--        <tui-input-date-->
+<!--          tuiUnfinishedValidator="Finish filling the field"-->
+<!--          formControlName="testValue"-->
+<!--        >-->
+<!--          Choose a date-->
+<!--        </tui-input-date>-->
+<!--        <tui-error-->
+<!--          formControlName="testValue"-->
+<!--          [error]="[] | tuiFieldError | async"-->
+<!--        ></tui-error>-->
+<!--      </form>-->
+<!--    </div>-->
+    <app-calendar></app-calendar>
+
+    <div class="tui-row tui-row_adaptive">
+      <app-dropdown-sort></app-dropdown-sort>
+    </div>
   </div>
-</tui-root>
+  <div>
+    <button
+      tuiButton
+      size="m"
+      (click)="observer.complete()"
+    >
+      Ок
+    </button>
+  </div>
+</ng-template>
