--- a/src/app/pages/booked-devices-page/booked-devices-page.component.scss
+++ b/src/app/pages/booked-devices-page/booked-devices-page.component.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 20px;
+  column-gap: 20px;
   justify-items: center;
-  margin-top: 0;
+  margin: 15px 20px 0 20px;
 }
