--- a/src/app/pages/list-devices-page/list-devices-page.component.scss
+++ b/src/app/pages/list-devices-page/list-devices-page.component.scss
@@ -1,12 +1,10 @@
-.wrapper{
+.wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
   row-gap: 20px;
   justify-items: center;
-  margin-top: 0;
-  //display: flex;
-  //flex-wrap: wrap;
-  //margin-left: 20px;
+  margin: 15px 20px 0 20px;
 }
 
 
