--- a/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
+++ b/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
@@ -1,21 +1,16 @@
-<div
-  class="back_side"
-  (click)="modalBookingCardService.close()"
-></div>
-
 <div class="wrapper">
-
   <div
-    style="display: grid; grid-template-columns: 2fr 3fr; column-gap: 15px; justify-items: center; margin-bottom: 15px;">
+    style="display: grid; grid-template-columns: 2fr 3fr; column-gap: 15px; justify-items: center; margin-bottom: 15px;"
+    *ngIf="device$ | async as device">
     <div class="container">
       <img class="container_img"
-           src="https://cdn.fotosklad.ru/upload/iblock/4c7/4c7ffb9c9517a423ddd05daabf243782_thumb_4d76a05b13f4590.jpg">
+           [src]="device.image">
     </div>
     <div class="container_spec">
-      <p style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">POCO X3 PRO</p>
-      <p style="text-align: center; font-size: 10px; line-height: 13px;">OS: MIUI, Android 11</p>
-      <p style="text-align: center; font-size: 10px; line-height: 13px;">Диагональ: 6.67"</p>
-      <p style="text-align: center; font-size: 10px; line-height: 13px;">Отдел: ...</p>
+      <p style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">{{device.name}}</p>
+      <p style="text-align: center; font-size: 10px; line-height: 13px;">OS: {{device.os}}</p>
+      <p style="text-align: center; font-size: 10px; line-height: 13px;">Диагональ: {{device.diagonal}}</p>
+      <p style="text-align: center; font-size: 10px; line-height: 13px;">Отдел: {{device.department.name}}</p>
     </div>
   </div>
 
@@ -75,7 +70,7 @@
     size="m"
     style="font-size: 15px; width: 270px;"
     appearance="green"
-    (click)="modalBookingCardService.close(); modalSuccessBookingService.open()"
+    (click)="modalSuccessBookingService.open()"
   >
     <tui-svg
       src="tuiIconCheckCircle"
