--- a/src/app/components/modal-windows/modal-usage-history/modal-usage-history.component.html
+++ b/src/app/components/modal-windows/modal-usage-history/modal-usage-history.component.html
@@ -1,8 +1,3 @@
-<div
-  class="back_side"
-  (click)="modalUsageHistoryService.close()"
-></div>
-
 <div class="wrapper">
   <h3 style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">История использования</h3>
   <h3 style="font-size: 12px;">20.10.2022</h3>
@@ -22,9 +17,9 @@
     type="button"
     class="button"
     size="m"
-    style="font-size: 15px; width: 270px; justify-content: center; align-self: center;"
+    style="font-size: 15px; width: 100%; justify-content: center; align-self: center;"
     appearance="red_outline"
-    (click)="modalUsageHistoryService.close(); modalDeviceCardService.open()"
+    (click)="closeUsageHistoryDialog()"
   >
     Назад
   </button>
