--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$artsofte_project-primary: mat.define-palette(mat.$indigo-palette);
+$artsofte_project-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$artsofte_project-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$artsofte_project-theme: mat.define-light-theme((
+  color: (
+    primary: $artsofte_project-primary,
+    accent: $artsofte_project-accent,
+    warn: $artsofte_project-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($artsofte_project-theme);
+
 /* You can add global styles to this file, and also import other style files */
 body{
   margin: 0;
@@ -27,4 +62,13 @@ body{
 
 [tuiWrapper][data-appearance='white'] {
   background: #fff;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Manrope", sans-serif; }
+
+.custom-modalbox {
+  mat-dialog-container {
+    border-radius: 20px;
+  }
 }
