--- a/src/app/components/dropdowns/dropdown-department/dropdown-department.component.html
+++ b/src/app/components/dropdowns/dropdown-department/dropdown-department.component.html
@@ -1,6 +1,6 @@
-<span (tuiActiveZoneChange)="onActiveZone($any($event))">
+<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 100%;">
     <button
-      style="width: 85vw; margin-bottom: 15px;"
+      style="width: 100%; margin-bottom: 15px;"
       tuiButton
       size="s"
       type="button"
