--- a/src/app/components/dropdowns/dropdown-system/dropdown-system.component.html
+++ b/src/app/components/dropdowns/dropdown-system/dropdown-system.component.html
@@ -1,6 +1,6 @@
-<span (tuiActiveZoneChange)="onActiveZone($any($event))">
-<!--      style="width: 40vw;"-->
+<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 40vw;">
     <button
+      style="width: 40vw;"
       size="s"
       tuiButton
       type="button"
