--- a/src/app/components/dropdowns/dropdown-tag/dropdown-tag.component.html
+++ b/src/app/components/dropdowns/dropdown-tag/dropdown-tag.component.html
@@ -2,10 +2,10 @@
   #dropdown
   [tuiDropdownMaxHeight]="500"
   [content]="content"
-  style="width: 85vw; margin-bottom: 15px;"
+  style="width: 100%; margin-bottom: 15px;"
 >
   <button
-    style="width: 85vw;"
+    style="width: 100%;"
     tuiButton
     size="s"
     type="button"
