--- a/src/app/components/dropdowns/dropdown-type/dropdown-type.component.html
+++ b/src/app/components/dropdowns/dropdown-type/dropdown-type.component.html
@@ -1,5 +1,6 @@
-<span (tuiActiveZoneChange)="onActiveZone($any($event))">
+<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 40vw;">
     <button
+      style="width: 40vw;"
       tuiButton
       size="s"
       type="button"
