--- a/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
+++ b/src/app/components/modal-windows/modal-booking-card/modal-booking-card.component.html
@@ -70,7 +70,7 @@
     size="m"
     style="font-size: 15px; width: 270px;"
     appearance="green"
-    (click)="modalSuccessBookingService.open()"
+    (click)="openSuccessBookingDialog()"
   >
     <tui-svg
       src="tuiIconCheckCircle"
