--- a/src/app/components/modal-windows/modal-confirm-return-device/modal-confirm-return-device.component.html
+++ b/src/app/components/modal-windows/modal-confirm-return-device/modal-confirm-return-device.component.html
@@ -1,21 +1,17 @@
-<div
-  class="back_side"
-  (click)="modalConfirmReturnDeviceService.close()"
-></div>
-
 <div class="container">
-  <p style="color: #2E62D9; font-size: 15px;">Выберите отдел, куда отнесете устройство</p>
-  <app-dropdown-department></app-dropdown-department>
-  <div style="display: grid; grid-template-columns: 1fr 1fr; justify-items: center; column-gap: 10px;">
+  <p style="color: #2E62D9; font-size: 15px; margin-top: 0; text-align: center">Выберите отдел, куда отнесете устройство</p>
+  <div style="width: 100%;">
+  <app-dropdown-department style="width: 100%"></app-dropdown-department>
+  </div>
+  <div class="buttons">
     <button
       tuiButton
       type="button"
       class="button"
       appearance="green_outline"
       size="m"
-      style="font-size: 15px; width: 130px;"
-      (click)="modalConfirmReturnDeviceService.close();
-                modalReturnDeviceService.open()"
+      style="font-size: 15px; width: 130px; margin-right: 15px;"
+      (click)="closeConfirmReturn(); openReturnDeviceDialog()"
     >
       Подтвердить
     </button>
@@ -26,7 +22,7 @@
       appearance="red_outline"
       size="m"
       style="font-size: 15px; width: 130px;"
-      (click)="modalConfirmReturnDeviceService.close()"
+      (click)="closeConfirmReturn()"
     >
       Отмена
     </button>
