--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -49,12 +49,12 @@
       <div class="tui-col" style="margin-right: 10px;">
         <app-dropdown-system></app-dropdown-system>
       </div>
-      <div class="tui-col">
+      <div class="tui-col" style="">
         <app-dropdown-type></app-dropdown-type>
       </div>
     </div>
 
-    <div class="tui-row tui-row_adaptive">
+    <div style="width: 100%; display: flex; flex-direction: column;">
       <app-dropdown-department></app-dropdown-department>
       <app-dropdown-tag></app-dropdown-tag>
     </div>
