--- a/src/app/components/modal-windows/modal-booking-history/modal-booking-history.component.html
+++ b/src/app/components/modal-windows/modal-booking-history/modal-booking-history.component.html
@@ -1,8 +1,3 @@
-<div
-  class="back_side"
-  (click)="modalBookingHistoryService.close()"
-></div>
-
 <div class="wrapper">
   <h3 style="text-align: center; font-size: 15px; margin: 0; line-height: 20px;">История бронирований</h3>
   <h3 style="font-size: 12px;">20.10.2022</h3>
@@ -16,15 +11,14 @@
   <p style="font-size: 12px;"><span>deviceName</span><span>HH:MM-HH:MM</span></p>
   <p style="font-size: 12px;"><span>deviceName</span><span>HH:MM-HH:MM</span></p>
 
-
   <button
     tuiButton
     type="button"
     class="button"
     size="m"
-    style="font-size: 15px; width: 270px; justify-content: center; align-self: center;"
+    style="font-size: 15px; width: 100%; justify-content: center; align-self: center;"
     appearance="red_outline"
-    (click)="modalBookingHistoryService.close()"
+    (click)="closeBookingHistoryDialog()"
   >
     Назад
   </button>
