--- a/src/app/components/modal-windows/modal-confirm-cancel-reserve/modal-confirm-cancel-reserve.component.html
+++ b/src/app/components/modal-windows/modal-confirm-cancel-reserve/modal-confirm-cancel-reserve.component.html
@@ -1,11 +1,6 @@
-<div
-  class="back_side"
-  (click)="modalCancelReserveService.close()"
-></div>
-
 <div class="container">
-  <p style="color: #2E62D9; font-size: 15px; text-align: center">Вы хотите отменить бронь?</p>
-  <div>
+  <p style="color: #2E62D9; font-size: 15px; text-align: center; margin-top: 0;">Вы хотите отменить бронь?</p>
+  <div class="buttons">
     <button
       tuiButton
       type="button"
@@ -13,7 +8,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 125px; margin-right: 15px;"
-      (click)="modalConfirmCancelReserveService.close(); modalCancelReserveService.open()"
+      (click)="closeConfirmCancelReserveDialog(); openCancelReserveDialog()"
     >
       Да
     </button>
@@ -24,7 +19,7 @@
       appearance="red_outline"
       size="m"
       style="font-size: 15px; width: 125px;"
-      (click)="modalConfirmCancelReserveService.close()"
+      (click)="closeConfirmCancelReserveDialog()"
     >
       Нет
     </button>
