--- a/src/app/components/modal-windows/modal-success-booking/modal-success-booking.component.html
+++ b/src/app/components/modal-windows/modal-success-booking/modal-success-booking.component.html
@@ -1,10 +1,5 @@
-<div
-  class="back_side"
-  (click)="modalSuccessBookingService.close()"
-></div>
-
 <div class="container">
-  <p style="color: #2E62D9; font-size: 15px; text-align: center; font-weight: 700;">Вы успешно забронировали<br>устройство</p>
+  <p style="color: #2E62D9; font-size: 15px; text-align: center; margin-top: 0;">Вы успешно забронировали<br>устройство</p>
   <div>
     <button
       tuiButton
@@ -13,7 +8,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 125px; margin-right: 15px;"
-      (click)="modalSuccessBookingService.close()"
+      (click)="closeSuccessBookingDialog()"
     >
       Ок
     </button>
