--- a/src/app/components/dropdowns/dropdown-sort/dropdown-sort.component.html
+++ b/src/app/components/dropdowns/dropdown-sort/dropdown-sort.component.html
@@ -1,6 +1,6 @@
-<span (tuiActiveZoneChange)="onActiveZone($any($event))">
+<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 100%">
     <button
-      style="margin-bottom: 15px; height:45px; width: 85vw;"
+      style="margin-bottom: 15px; height:45px; width: 100%;"
       tuiButton
       type="button"
       iconRight="tuiIconChevronDown"
