--- a/src/app/components/dropdowns/dropdown-type/dropdown-type.component.html
+++ b/src/app/components/dropdowns/dropdown-type/dropdown-type.component.html
@@ -1,6 +1,6 @@
-<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 40vw;">
+<span (tuiActiveZoneChange)="onActiveZone($any($event))" style="width: 100%;">
     <button
-      style="width: 40vw;"
+      style="width: 100%;"
       tuiButton
       size="s"
       type="button"
