--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,17 +1,17 @@
 <nav class="nav">
-  <a routerLink="/booked" class="link" routerLinkActive="active">
+  <a routerLink="/booked" class="link" routerLinkActive="active" (click)="onClick()">
       <tui-svg
         src="tuiIconCheckCircleLarge"
         class="icon"
       ></tui-svg>
   </a>
-  <a routerLink="/devices" class="link" routerLinkActive="active">
+  <a routerLink="/devices" class="link" routerLinkActive="active" (click)="onClick()">
       <tui-svg
         src="tuiIconSearchLarge"
         class="icon"
       ></tui-svg>
   </a>
-  <a routerLink="/profile" class="link" routerLinkActive="active">
+  <a routerLink="/profile" class="link" routerLinkActive="active" (click)="onClick()">
       <tui-svg
         src="tuiIconUser"
         class="icon"
