--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,31 +1,33 @@
-<button
-  tuiButton
-  size="m"
-  style="border-radius: 0 0 25px 25px; width: 100%; height: 60px; box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.1);"
-  appearance="white"
-  (click)="onClick(content, 'm')"
->
-  открыть
-</button>
+<div class="wrapper">
+  <form style="width: 80%; margin: 0 auto; margin-top: 15px;">
+    <tui-input style=""
+               [tuiTextfieldLabelOutside]="true"
+               tuiTextfieldSize="s">
+      Начните поиск здесь...
+      <input
+        tuiTextfield
+        type="text"
+        [(ngModel)]="searchTerm"
+        (keyup)="search($event)"
+      />
+    </tui-input>
+  </form>
+  <button
+    tuiButton
+    size="s"
+    style="width: 100%; margin: 4px 0;"
+    appearance="white"
+    (click)="onClick(content, 'm')"
+  >
+    открыть
+  </button>
+</div>
 
 <ng-template
   #content
   let-observer
 >
   <div class="filter tui-container tui-container_adaptive">
-    <div class="tui-row tui-row_adaptive">
-      <form style="width: 100%">
-        <tui-input style="margin-bottom: 15px;"
-                   [tuiTextfieldLabelOutside]="true">
-          Начните поиск здесь...
-          <input
-            tuiTextfield
-            type="text"
-          />
-        </tui-input>
-      </form>
-    </div>
-
     <div class="tui-row tui-row_adaptive">
       <tui-island class="island">
         <p style="margin-top: 0; margin-bottom: 11px;">Размер экрана, дюймов</p>
@@ -45,11 +47,11 @@
       </tui-island>
     </div>
 
-    <div class="tui-row tui-row_adaptive" style="margin-bottom: 15px; justify-items: center">
-      <div class="tui-col" style="margin-right: 10px;">
+    <div class="tui-row tui-row_adaptive" style="margin-bottom: 15px; justify-items: center; justify-content: center">
+      <div class="tui-col" style="margin-right: 10px; width: 46%">
         <app-dropdown-system></app-dropdown-system>
       </div>
-      <div class="tui-col" style="">
+      <div class="tui-col" style="width: 46%">
         <app-dropdown-type></app-dropdown-type>
       </div>
     </div>
@@ -59,38 +61,22 @@
       <app-dropdown-tag></app-dropdown-tag>
     </div>
 
-<!--    <div class="tui-row tui-row_adaptive">-->
-<!--      <form-->
-<!--        class="b-form"-->
-<!--        style="margin-bottom: 15px; width: 100%"-->
-<!--        [formGroup]="testForm"-->
-<!--        [tuiTextfieldCleaner]="true"-->
-<!--      >-->
-<!--        <tui-input-date-->
-<!--          tuiUnfinishedValidator="Finish filling the field"-->
-<!--          formControlName="testValue"-->
-<!--        >-->
-<!--          Choose a date-->
-<!--        </tui-input-date>-->
-<!--        <tui-error-->
-<!--          formControlName="testValue"-->
-<!--          [error]="[] | tuiFieldError | async"-->
-<!--        ></tui-error>-->
-<!--      </form>-->
-<!--    </div>-->
     <app-calendar></app-calendar>
 
-    <div class="tui-row tui-row_adaptive">
+    <div class="" style="width: 100%;">
       <app-dropdown-sort></app-dropdown-sort>
     </div>
+    <div>
+      <button
+        tuiButton
+        size="m"
+        appearance="green_outline"
+        style="width: 100%"
+        (click)="observer.complete()"
+      >
+        Поиск
+      </button>
+    </div>
   </div>
-  <div>
-    <button
-      tuiButton
-      size="m"
-      (click)="observer.complete()"
-    >
-      Ок
-    </button>
-  </div>
+
 </ng-template>
