--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -3,13 +3,24 @@
   background-color: #fff;
   //transform: translateY(-375px);
   //position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: flex-end;
   //align-items: center;
 }
 
 .island{
   margin-bottom: 15px;
   width: 100%;
+}
+
+.wrapper {
+  border-radius: 0 0 25px 25px;
+  width: 100%;
+  height: 85px;
+  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  position: fixed;
+  z-index: 2;
+  top: 0;
 }
