--- a/src/app/components/modal-windows/modal-confirm-cancel-reserve/modal-confirm-cancel-reserve.component.html
+++ b/src/app/components/modal-windows/modal-confirm-cancel-reserve/modal-confirm-cancel-reserve.component.html
@@ -8,7 +8,7 @@
       appearance="green_outline"
       size="m"
       style="font-size: 15px; width: 125px; margin-right: 15px;"
-      (click)="closeConfirmCancelReserveDialog(); openCancelReserveDialog()"
+      (click)="openCancelReserveDialog(); cancelBookedDevice()"
     >
       Да
     </button>
