--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,7 @@ body{
 
 [tuiWrapper][data-appearance='white'] {
   background: #fff;
+  border-radius: 0 0 25px 25px;
 }
 
 html, body { height: 100%; }
@@ -70,5 +71,10 @@ body { margin: 0; font-family: Roboto, "Manrope", sans-serif; }
 .custom-modalbox {
   mat-dialog-container {
     border-radius: 20px;
+    cursor: none;
   }
+}
+
+.cdk-overlay-container {
+  z-index: 0 !important;
 }
